force-app/main/default/objects/CustomerContract__c/CustomerContract__c.object-meta.xml
<CustomObject>
    <label>Customer Contract</label>
    <nameField>
        <displayFormat>CC-{00000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>