force-app/main/default/objects/CustomerContract__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The customer this contract belongs to. There is exactly one active contract per customer — all agreements (index, refund, marketing subsidy) hang below it as positions. [Sources: MN-001 Z.35]</description>
    <inlineHelpText>The customer this contract belongs to. There is exactly one active contract per customer — all agreements (index, refund, marketing subsidy) hang below it as positions.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Contracts</relationshipLabel>
    <relationshipName>CustomerContracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>