force-app/main/default/objects/CustomerContract__c/fields/BillingBlocked__c.field-meta.xml
<CustomField>
    <fullName>BillingBlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Billing block from SAP — the contract is currently not settled. [Sources: Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>Billing block from SAP — the contract is currently not settled.</inlineHelpText>
    <label>Billing Blocked</label>
    <type>Checkbox</type>
</CustomField>