force-app/main/default/objects/CustomerContract__c/fields/BillingPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodEnd__c</fullName>
    <description>End of the billing period from SAP. [Sources: Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>End of the billing period from SAP.</inlineHelpText>
    <label>Billing Period End</label>
    <type>Date</type>
</CustomField>