force-app/main/default/objects/CustomerContract__c/fields/BillingPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>BillingPeriodStart__c</fullName>
    <description>Start of the billing period from SAP — usually identical to the contract term. [Sources: Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>Start of the billing period from SAP — usually identical to the contract term.</inlineHelpText>
    <label>Billing Period Start</label>
    <type>Date</type>
</CustomField>