force-app/main/default/objects/CustomerContract__c/fields/ContractName__c.field-meta.xml
<CustomField>
    <fullName>ContractName__c</fullName>
    <description>The contract name from SAP — usually the customer name in short form (match code). [Sources: Confluence 31 Vertrag abschließen, Org-Drift 2026-06-29]</description>
    <inlineHelpText>The contract name from SAP — usually the customer name in short form (match code).</inlineHelpText>
    <label>Contract Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>