force-app/main/default/objects/CustomerContract__c/fields/ContractSignedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractSignedDate__c</fullName>
    <description>The contract date from SAP. Business meaning still being clarified per the mapping documentation. [Sources: Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>The contract date from SAP. Business meaning still being clarified per the mapping documentation.</inlineHelpText>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>