force-app/main/default/objects/CustomerContract__c/fields/ContractType__c.field-meta.xml
<CustomField>
    <fullName>ContractType__c</fullName>
    <description>SAP contract type of the header — distinguishes e.g. regular AHS gastro contracts (20) from machine contracts (91), which run in a separate track. [Sources: MN-003 Z.530, MN-006 Z.47, User 2026-06-11: Picklist nicht restricted]</description>
    <inlineHelpText>SAP contract type of the header — distinguishes e.g. regular AHS gastro contracts (20) from machine contracts (91), which run in a separate track.</inlineHelpText>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Verträge LEH/Handel</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Verträge AHS/Gastro</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Verträge Export</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Verträge Konzern/Intern</label>
            </value>
            <value>
                <fullName>90</fullName>
                <label>Sonstige Verträge</label>
            </value>
            <value>
                <fullName>91</fullName>
                <label>Verträge Maschinen</label>
            </value>
            <value>
                <fullName>92</fullName>
                <label>Verträge Lieferanten</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>