force-app/main/default/objects/CustomerContract__c/fields/ERPContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPContractNumber__c</fullName>
    <description>The contract number from SAP — the fixed link between the Salesforce contract and the SAP original. Carries the data backflow and update-in-place versioning. [Sources: MN-003 Z.818, MN-005, User 2026-06-11: unique, D-01 2026-08-11: 35 = SAP-Format VERTNR String(35)]</description>
    <externalId>true</externalId>
    <inlineHelpText>The contract number from SAP — the fixed link between the Salesforce contract and the SAP original. Carries the data backflow and update-in-place versioning.</inlineHelpText>
    <label>ERP Contract Number</label>
    <length>35</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>