force-app/main/default/objects/CustomerContract__c/fields/ERPCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>ERPCreatedDate__c</fullName>
    <description>When the contract was created in SAP (date + time). Own field because the Salesforce created date only reflects the sync moment. [Sources: E-03 2026-08-11, Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>When the contract was created in SAP (date + time). Own field because the Salesforce created date only reflects the sync moment.</inlineHelpText>
    <label>ERP Created Date</label>
    <type>DateTime</type>
</CustomField>