force-app/main/default/objects/CustomerContract__c/fields/LegacyERPContractNumber__c.field-meta.xml
<CustomField>
    <fullName>LegacyERPContractNumber__c</fullName>
    <description>The legacy contract number from the SAP legacy stock — for tracing migrated contracts. [Sources: Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>The legacy contract number from the SAP legacy stock — for tracing migrated contracts.</inlineHelpText>
    <label>Legacy ERP Contract Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>