force-app/main/default/objects/CustomerContract__c/fields/MarkedForDeletion__c.field-meta.xml
<CustomField>
    <fullName>MarkedForDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAP deletion flag — the contract is marked for deletion in SAP. [Sources: Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>SAP deletion flag — the contract is marked for deletion in SAP.</inlineHelpText>
    <label>Marked For Deletion</label>
    <type>Checkbox</type>
</CustomField>