force-app/main/default/objects/CustomerContract__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the PuK quote this contract originated from — keeps the negotiation and underlying simulation traceable. [Sources: MN-002 Z.35, Org: Quote = PuK-Strecke]</description>
    <inlineHelpText>Reference to the PuK quote this contract originated from — keeps the negotiation and underlying simulation traceable.</inlineHelpText>
    <label>Source Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Customer Contracts</relationshipLabel>
    <relationshipName>CustomerContracts</relationshipName>
    <type>Lookup</type>
</CustomField>