force-app/main/default/objects/CustomerContract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>SAP contract status (code = value, plain text = label). &apos;Draft&apos; is the only SF-own value: captured in PuK, not yet in SAP. Only ONE contract with status 150 is allowed per customer — to be enforced by a validation rule. [Sources: K-1 2026-08-11: SAP-Codes als Werte (Parität), Bild (9).png (Werteliste, Vollständigkeit unbestätigt)]</description>
    <inlineHelpText>SAP contract status (code = value, plain text = label). &apos;Draft&apos; is the only SF-own value: captured in PuK, not yet in SAP. Only ONE contract with status 150 is allowed per customer — to be enforced by a validation rule.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <label>Draft (not yet in SAP)</label>
            </value>
            <value>
                <fullName>110</fullName>
                <label>VT unvollständig</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>Storno</label>
            </value>
            <value>
                <fullName>150</fullName>
                <label>VT freigegeben (aktiv)</label>
            </value>
            <value>
                <fullName>160</fullName>
                <label>Vertragsende registriert</label>
            </value>
            <value>
                <fullName>170</fullName>
                <label>VT Beendet</label>
            </value>
            <value>
                <fullName>180</fullName>
                <label>VT verklagt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>