force-app/main/default/objects/CustomerContract__c/fields/TerminationDate__c.field-meta.xml
<CustomField>
    <fullName>TerminationDate__c</fullName>
    <description>Termination date from SAP. Important: it does NOT automatically change the contract status in SAP — a termination is only visible via this field. [Sources: Confluence 31 Vertrag abschließen]</description>
    <inlineHelpText>Termination date from SAP. Important: it does NOT automatically change the contract status in SAP — a termination is only visible via this field.</inlineHelpText>
    <label>Termination Date</label>
    <type>Date</type>
</CustomField>