force-app/main/default/objects/CustomerContract__c/fields/TerminationReason__c.field-meta.xml
<CustomField>
    <fullName>TerminationReason__c</fullName>
    <description>Termination reason from SAP. Real values still pending — waiting for the SAP value list; placeholder until then. [Sources: Confluence 31 Vertrag abschließen, CI-304]</description>
    <inlineHelpText>Termination reason from SAP. Real values still pending — waiting for the SAP value list; placeholder until then.</inlineHelpText>
    <label>Termination Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>