force-app/main/default/objects/CustomerContract__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>Start of the contract term at header level. [Sources: MN-001 Z.17]</description>
    <inlineHelpText>Start of the contract term at header level.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>