force-app/main/default/objects/CustomerContract__c/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>End of the contract term. SAP never deletes but limits validity — open-ended contracts are set to 31.12.2099. Basis for the expiry warning to the KAM. [Sources: MN-003 Z.278]</description>
    <inlineHelpText>End of the contract term. SAP never deletes but limits validity — open-ended contracts are set to 31.12.2099. Basis for the expiry warning to the KAM.</inlineHelpText>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>