force-app/main/default/objects/CustomerContract__c/listViews/Active_Contracts.listView-meta.xml
<ListView>
    <fullName>Active_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ContractType__c</columns>
    <columns>ValidTo__c</columns>
    <columns>ERPContractNumber__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Contracts</label>
</ListView>