force-app/main/default/objects/CustomerContract__c/listViews/All_Contracts.listView-meta.xml
<ListView>
    <fullName>All_Contracts</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ContractType__c</columns>
    <columns>Status__c</columns>
    <columns>ValidFrom__c</columns>
    <columns>ValidTo__c</columns>
    <columns>ERPContractNumber__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>